GPU subdivision: 3.0.1 - 3.1.0 EEVEE Tangent Space Discrepancy #96563

Closed
opened 2022-03-17 15:40:59 +01:00 by Ethan-Hall · 7 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e

Short description of error
There is a discrepancy when tangents are calculated when using GPU subdivision.

Exact steps for others to reproduce the error
View the the test file with EEVEE. Compare GPU subdivision on vs. off.

Test File:
vector_displacement_tangent.blend

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` **Short description of error** There is a discrepancy when tangents are calculated when using GPU subdivision. **Exact steps for others to reproduce the error** View the the test file with EEVEE. Compare GPU subdivision on vs. off. Test File: [vector_displacement_tangent.blend](https://archive.blender.org/developer/F12931952/vector_displacement_tangent.blend)
Author

Added subscriber: @Ethan-Hall

Added subscriber: @Ethan-Hall

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @kevindietrich, @lichtwerk

Added subscribers: @kevindietrich, @lichtwerk
Member
CC @kevindietrich
Philipp Oeser changed title from 3.0.1 - 3.1.0 EEVEE GPU Subdivision Tangent Space Discrepancy to GPU subdivision: 3.0.1 - 3.1.0 EEVEE Tangent Space Discrepancy 2022-04-12 16:44:16 +02:00
Member

Talked to @kevindietrich , setting to High prio (since it is a bug in a new feature according to the playbook

Talked to @kevindietrich , setting to High prio (since it is a bug in a new feature according to the [playbook ](https://wiki.blender.org/wiki/Process/Bug_Reports/Triaging_Playbook)

This issue was referenced by f84f9eb8ed

This issue was referenced by f84f9eb8ed439e5d3409f15109bdb67cd87b7fcf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-04-14 03:50:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96563
No description provided.