Fix T96563: tangents artifacts with GPU subdivision

When tangent are computed from generated coordinates, the result for GPU
subdivision would be compressed to 16-bit when it shouldn't.